# blenter

./: CMakeLists.txt  block.hpp  block_entity.cpp  block_entity.hpp  cursor_entity.cpp  cursor_entity.hpp  editor_scene.cpp  editor_scene.hpp  engine.cpp  engine.hpp  main.cpp  object.cpp  object.hpp  objects_scene.cpp  objects_scene.hpp  quad_entity.cpp  quad_entity.hpp  shapes.cpp  shapes.hpp  texture.cpp  texture.hpp  ui_scene.cpp  ui_scene.hpp  vcpkg.json
example/jar/: info.json
example/pot/: info.json
example/small/: info.json
lib/graphics/: camera.cpp  camera.hpp  color.hpp  cursor.cpp  cursor.hpp  cursor_type.hpp  entity.cpp  entity.hpp  event.cpp  event.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mouse.cpp  mouse.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  style.cpp  style.hpp  view.cpp  view.hpp  window.cpp  window.hpp
